unpackaged/main/default/objects/Texas_Snapshot__c/Texas_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Texas Snapshot</label>
    <nameField>
        <label>Texas Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Texas Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>