unpackaged/main/default/objects/Texas_Snapshot__c/fields/Cumulative_Adoptions__c.field-meta.xml
<CustomField>
    <fullName>Cumulative_Adoptions__c</fullName>
    <label>Cumulative Adoptions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>