unpackaged/main/default/objects/Texas_Snapshot__c/fields/Number_of_Adoptions_Sum__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Adoptions_Sum__c</fullName>
    <label>Adoptions Current</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>